# bot-discord-rust

./: Cargo.toml
src/: main.rs
